--- a/index.html
+++ b/index.html
@@ -45,20 +45,19 @@
                             <option value="C">C</option>
                             <option value="Java">Java</option>
                             <option value="Python">Python</option>
-                            <option value="JavaScript">JavaScript</option>
-                            <option value="PHP">PHP</option>
+                            <option value="C#">C#</option>
                         </select>
                     </div>
                     <div>
                         <button type="button" class="btn btn-success">Run</button>
                     </div>
                 </div>
-                <div class="rounded border border-success p-2" style="--bs-border-opacity: 0.25">
+                <div class="rounded border border-success p-2" style="--bs-border-opacity: 0.3">
                     <textarea type="text" id="editor" class="form-control" aria-label="First name"></textarea>
                 </div>
             </div>
             <div class="col d-flex flex-column rounded border border-success p-2" style="--bs-border-opacity: 0.25">
-                <div class="h-50 bg-dark px-4">
+                <div class="h-50 bg-dark px-4 rounded border">
                     <label for="Input" class="text-light">Input</label>
                     <textarea type="text" class="form-control h-75 mt-3 mb-2" aria-label="Last name"></textarea>
                 </div>
