--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         </select>
                     </div>
                     <div>
-                        <button type="button" class="btn btn-success">Run</button>
+                        <button type="button" id="run" class="btn btn-success">Run</button>
                     </div>
                 </div>
                 <div class="rounded border border-success p-2" style="--bs-border-opacity: 0.3">
@@ -59,11 +59,11 @@
             <div class="col d-flex flex-column rounded border border-success p-2" style="--bs-border-opacity: 0.25">
                 <div class="h-50 bg-dark px-4 rounded border">
                     <label for="Input" class="text-light">Input</label>
-                    <textarea type="text" class="form-control h-75 mt-3 mb-2" aria-label="Last name"></textarea>
+                    <textarea type="text" id="input" class="form-control h-75 mt-3 mb-2" aria-label="Last name"></textarea>
                 </div>
-                <div class="h-50 bg-dark px-4">
+                <div class="h-50 bg-dark rounded border px-4">
                     <label for="Output" class="text-light">Output</label>
-                    <textarea type="text" class="form-control h-75 mt-3 mb-2" aria-label="Last name"></textarea>
+                    <textarea type="text" id="output" class="form-control h-75 mt-3 mb-2" aria-label="Last name"></textarea>
                 </div>
             </div>
         </div>
