--- a/index.html
+++ b/index.html
@@ -1,73 +1,125 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Code Editor</title>
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Code Editor</title>
 
-        <!-- bootstrap link -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-            integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-            crossorigin="anonymous"></script>
+    <!-- bootstrap link -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 
-        <!-- codemirror css link -->
-        <link rel="stylesheet" href="codemirror-5.65.16/lib/codemirror.css" />
+    <!-- codemirror css link -->
+    <link rel="stylesheet" href="codemirror-5.65.16/lib/codemirror.css" />
 
-        <!-- codemirror js link -->
-        <script src="codemirror-5.65.16/lib/codemirror.js"></script>
+    <!-- codemirror js link -->
+    <script src="codemirror-5.65.16/lib/codemirror.js"></script>
 
-        <!-- codemirror mode link -->
-        <script src="codemirror-5.65.16/mode/clike/clike.js"></script><!--C++,C,Java-->
-        <script src="codemirror-5.65.16/mode/python/python.js"></script><!--Python-->
-        <script src="codemirror-5.65.16/mode/php/php.js"></script><!--php-->
-        <script src="codemirror-5.65.16/mode/javascript/javascript.js"></script><!--js-->
+    <!-- codemirror mode link -->
+    <script src="codemirror-5.65.16/mode/clike/clike.js"></script><!--C++,C,Java-->
+    <script src="codemirror-5.65.16/mode/python/python.js"></script><!--Python-->
+    <script src="codemirror-5.65.16/mode/php/php.js"></script><!--php-->
+    <script src="codemirror-5.65.16/mode/javascript/javascript.js"></script><!--js-->
 
-        <!-- codemirror theme link -->
-        <link rel="stylesheet" href="codemirror-5.65.16/theme/oceanic-next.css" />
+    <!-- codemirror theme link -->
+    <link rel="stylesheet" href="codemirror-5.65.16/theme/oceanic-next.css" />
 
-        <!-- codemirror auto close bracket link -->
-        <script src="codemirror-5.65.16/addon/edit/closebrackets.js"></script>
+    <!-- codemirror auto close bracket link -->
+    <script src="codemirror-5.65.16/addon/edit/closebrackets.js"></script>
 
-    </head>
+</head>
 
-    <body>
-        <div class="row m-3">
-            <div class="col">
-                <div class="d-flex justify-content-between mb-2 bg-dark rounded border border-success p-2" style="--bs-border-opacity: 0.25">
-                    <div class="col-12 w-25">
-                        <label class="visually-hidden" for="inlineFormSelectPref">Preference</label>
-                        <select class="form-select" id="inlineFormSelectPref">
-                            <option selected>Choose the language</option>
-                            <option value="C++">C++</option>
-                            <option value="C">C</option>
-                            <option value="Java">Java</option>
-                            <option value="Python">Python</option>
-                            <option value="C#">C#</option>
-                        </select>
-                    </div>
-                    <div>
-                        <button type="button" id="run" class="btn btn-success">Run</button>
-                    </div>
+<body>
+    <div class="row m-3">
+        <div class="col">
+            <div class="d-flex justify-content-between mb-2 bg-dark rounded border border-success p-2"
+                style="--bs-border-opacity: 0.25">
+                <div class="col-12 w-25">
+                    <label class="visually-hidden" for="inlineFormSelectPref">Preference</label>
+                    <select class="form-select" id="inlineFormSelectPref">
+                        <option selected>Choose the language</option>
+                        <option value="C">C</option>
+                        <option value="C++">C++</option>
+                        <option value="Java">Java</option>
+                        <!-- <option value="JavaScript">JavaScript</option> -->
+                        <!-- <option value="PHP">PHP</option> -->
+                        <option value="Python">Python</option>
+                    </select>
                 </div>
-                <div class="rounded border border-success p-2" style="--bs-border-opacity: 0.3">
-                    <textarea type="text" id="editor" class="form-control" aria-label="First name"></textarea>
+                <div>
+                    <button type="button" id="run" class="btn btn-success">Run</button>
                 </div>
             </div>
-            <div class="col d-flex flex-column rounded border border-success p-2" style="--bs-border-opacity: 0.25">
-                <div class="h-50 bg-dark px-4 rounded border">
-                    <label for="Input" class="text-light">Input</label>
-                    <textarea type="text" id="input" class="form-control h-75 mt-3 mb-2" aria-label="Last name"></textarea>
-                </div>
-                <div class="h-50 bg-dark rounded border px-4">
-                    <label for="Output" class="text-light">Output</label>
-                    <textarea type="text" id="output" class="form-control h-75 mt-3 mb-2" aria-label="Last name"></textarea>
-                </div>
+            <div class="rounded border border-success p-2" style="--bs-border-opacity: 0.25">
+                <textarea type="text" id="editor" class="form-control" aria-label="First name"></textarea>
             </div>
         </div>
-    </body>
-    <script src="script.js"></script>
+        <div class="col d-flex flex-column rounded border border-success p-2" style="--bs-border-opacity: 0.25">
+            <div class="h-50 bg-dark px-4">
+                <label for="Input" class="text-light">Input</label>
+                <textarea type="text" id="input" class="form-control h-75 mt-3 mb-2" aria-label="Last name"></textarea>
+            </div>
+            <div class="h-50 bg-dark px-4">
+                <label for="Output" class="text-light">Output</label>
+                <textarea type="text" id="output" class="form-control h-75 mt-3 mb-2" aria-label="Last name"></textarea>
+            </div>
+        </div>
+    </div>
+</body>
+<script>
+    var editor = CodeMirror.fromTextArea(document.getElementById("editor"), {
+        mode: "text/x-c++src",
+        theme: "oceanic-next",
+        lineNumbers: true,
+        autoCloseBrackets: true,
+    });
+    var width = window.innerWidth;
+    var input = document.getElementById("input")
+    var output = document.getElementById("output")
+    var run = document.getElementById("run")
+    editor.setSize(0.7 * width, "500");
+    var option = document.getElementById("inlineFormSelectPref")
+    option.addEventListener("change", function () {
+        if (option.value == "Java") {
+            editor.setOption("mode", "text/x-java")
+        }
+        else if (option.value == "Python") {
+            editor.setOption("mode", "text/x-python")
+        }
+        else if (option.value == "C") {
+            editor.setOption("mode", "text/x-csrc")
+        }
+        else if (option.value == "JavaScript") {
+            editor.setOption("mode", "text/javascript")
+        }
+        else if (option.value == "PHP") {
+            editor.setOption("mode", "text/x-php")
+        }
+        else {
+            editor.setOption("mode", "text/x-c++src")
+        }
+    })
+    var code;
+    run.addEventListener("click", async function () {
+        code = {
+            code: editor.getValue(),
+            input: input.value,
+            lang: option.value
+        }
+        var oData = await fetch("http://localhost:8000/compile", {
+            method: "POST",
+            headers: {
+                "Content-Type": "application/json"
+            },
+            body: JSON.stringify(code)
+        })
+        var d = await oData.json()
+        output.value = d.output
+    })
+</script>
 
 </html>
